5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_1053.log
== TEST (2019-04-03 19:42:07) 
-- CODE:
patrono= input("Digite o patrono: ")
if (patrono == cervo):
	msg= patrono+" eh patrono do Harry Potter"
else:
	msg= patrono+ "nao eh patrono do Harry Potter"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:42:58) 
-- CODE:
patrono= input("Digite o patrono: ")
x= cervo
if (patrono > x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:43:12) 
-- CODE:
patrono= int(input("Digite o patrono: "))
x= cervo
if (patrono > x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    patrono= int(input())
ValueError: invalid literal for int() with base 10: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:44:18) 
-- CODE:
patrono= input("Digite o patrono: ")
x= cervo
if (patrono > x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:44:35) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono > x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervonao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:44:59) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono < x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervonao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:45:29) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + "nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:45:45) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= x +" eh patrono do Harry Potter"
else:
	msg= x + " nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:30:40) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= patrono +" eh patrono do Harry Potter"
else:
	msg= patrono + " nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:31:02) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= patrono +" eh patrono do Harry Potter"
else:
	msg= patrono + " nao eh patrono do Harry Potter"
print(msg)
-- EXECUTION TIME:
0.196736
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:29:29) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= patrono +" eh patrono do Harry Potter"
else:
	msg= patrono + " nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:52:41) 
-- CODE:
patrono= input("Digite o patrono: ")
x= "cervo"
if (patrono == x):
	msg= patrono +" eh patrono do Harry Potter"
else:
	msg= patrono + " nao eh patrono do Harry Potter"
print(msg)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
